test/reverseSquare14.slq
def f[n:!â„•](x:ğ”¹^n)mfreeâ‡’x;
def g[n:!â„•](x:ğ”¹^n,const y:ğ”¹)mfreeâ‡’x;
def main(){
	f(x,y):=(); /// error
	f[3](w,z):=(); /// error
	f[2](x):=2; /// error
	g(x,x,x):=(); /// error
	g[2](x,x,x):=(); /// error
}
